--- a/tarjeta.html
+++ b/tarjeta.html
@@ -2,7 +2,7 @@
 
 <html>
     <head>
-        <link rel="stylesheet" href="estiloTarjeta.css">
+        <link rel="stylesheet" href="css/estiloTarjeta.css">
         <script defer src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
         <script defer src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
         <script defer src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
