--- a/tarjeta.html
+++ b/tarjeta.html
@@ -3,6 +3,9 @@
 <html>
     <head>
         <link rel="stylesheet" href="css/estiloTarjeta.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
         <script defer src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
         <script defer src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
         <script defer src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
