añadir jugadores en partida, preparando boton de borrar usuario

--- a/botoneras.html
+++ b/botoneras.html
@@ -27,6 +27,9 @@
                     <button onclick="ready()">
                         READY
                     </button>
+                    <button onclick="vaciaJuego()">
+                        VACIAR
+                    </button>
                 </li>
             </ul>
             
